// prompt.proto
syntax = "proto3";

package prompt;
option go_package = "./prompt_api";

service PromptService {
    rpc SendPrompt(SendPromptRequest) returns (SendPromptResponse);
}

message SendPromptRequest {
    string prompt = 1;
    string chat = 2;
    string userID = 3;
    string targetID = 4;
}

message SendPromptResponse {
    bool status = 1;
    oneof optional_score {
        uint32 score = 2;
    }
}
